# learnloop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  course_quality.md  feature_request.md
.github/workflows/: ci.yml
courses/acp-fundamentals/: README.md  check-server.sh  course.yaml  question-server.py  start-server.sh
courses/acp-fundamentals/.learnloop/: claims.jsonl  course_architecture.md
courses/acp-fundamentals/modules/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md
courses/agent/mcp-fundamentals/: course.yaml
courses/agent/pi-agent/: course.yaml
courses/agent/shenxiaoli/: course.yaml  questions.jsonl
courses/mcp-fundamentals/: README.md
courses/qwen-agentworld/: course.yaml  generation_brief.md
docs/: agent-quickstart.md  content-forms.md  course-quality.md  evidence-and-sources.md  release.md
learnloop/: cli.py  course.py  doctor.py  fix.py  fmt.py  i18n.py  ingest.py  knowledge.py  model.py  parser.py  renderer.py  scaffold.py  server.py  templates.py
skills/learnloop/: SKILL.md
templates/: base.css  runtime-base.js
templates/case/: manifest.yaml  runtime.js  style.css  template.html
templates/editorial/: manifest.yaml  runtime.js  style.css  template.html
templates/practice/: manifest.yaml  runtime.js  style.css  template.html
templates/reference/: manifest.yaml  runtime.js  style.css  template.html
templates/scenario/: manifest.yaml
templates/tutorial/: manifest.yaml  style.css  template.html
templates/workshop/: manifest.yaml  style.css  template.html
tests/: test_learnloop.py
(+127 files in other folders)
